--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
   <script defer="defer" src="bundle.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>img{width: 100px; height: 100px}</style>
 </head>
 <body>
   <div id="root"></div>
