--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,13 @@
   <title>Document</title>
   <script defer="defer" src="bundle.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>img{width: 100px; height: 100px}</style>
+  <style>
+  .outline-none {
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+    border: none !important;
+  }
+  </style>
 </head>
 <body>
   <div id="root"></div>
